Trying to fix alignment

--- a/exercise-4/Styles/style.css
+++ b/exercise-4/Styles/style.css
@@ -41,6 +41,7 @@ ul li a:hover {
 }
 
 .content {
+  margin: 0 auto;
   padding: 50px 0;
   text-align: center;
 }
